# PropLens-Assignment

./: .gitignore  Functionality Testing.md  README.md  data_ingestion.py  docx_bot.py  excel_bot.py  image_bot.py  main.py  pdf-2.py  pdf_bot.py  prompt.py  pyproject.toml  test_bots.py
Approach-1/: data_ingestion.py  main.py
Approach-2/: image_bot.py  pdf_bot.py
